Dibuat menggunakan Colaboratory

--- a/Sitti_Halimah_SL_1_1_Let's_Start_Coding.ipynb
+++ b/Sitti_Halimah_SL_1_1_Let's_Start_Coding.ipynb
@@ -93,7 +93,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9257585a-5918-41ee-8890-70cc1d4766ca"
+        "outputId": "70b77b85-b176-469a-e123-067a6ca1e11b"
       },
       "execution_count": 1,
       "outputs": [
@@ -116,7 +116,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WobW63LdIWe0",
-        "outputId": "3b08b4b8-5e50-44a1-bfaf-243333eee323"
+        "outputId": "67a4fb98-c1f4-441f-855e-424edfa3cda9"
       },
       "execution_count": 2,
       "outputs": [
@@ -163,7 +163,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "537a0f78-d4ac-4bc2-8351-2c51a1067ea2"
+        "outputId": "8a94a2de-26e1-4335-bbdf-3840a81f4380"
       },
       "execution_count": 3,
       "outputs": [
@@ -199,7 +199,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "619ee6cf-70e3-4e3c-9abc-6c84b79fa36a"
+        "outputId": "f35d2934-bdf1-4731-88b8-cbeb0f69b8fc"
       },
       "execution_count": 4,
       "outputs": [
@@ -237,7 +237,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "abf05d14-f305-4445-d1b4-78c3a3350694"
+        "outputId": "b0ee2f63-81d7-411c-8f88-96f6b890b1f8"
       },
       "execution_count": 5,
       "outputs": [
@@ -308,7 +308,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3e32723c-2881-4d25-84e6-3483ffc543a1"
+        "outputId": "94565569-cf8c-486b-89d8-a5d046cdcb56"
       },
       "execution_count": 6,
       "outputs": [
@@ -360,7 +360,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fd7c5774-1fac-4c5d-d616-be250baee8eb"
+        "outputId": "1acfbca0-2d7c-4576-cfab-2302142b562b"
       },
       "execution_count": 7,
       "outputs": [
@@ -405,7 +405,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7380702a-f253-4cb6-a9a3-cafc17f35888"
+        "outputId": "cf5fc2a7-683d-485e-d2ff-8397c4be21cd"
       },
       "execution_count": 8,
       "outputs": [
@@ -456,7 +456,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3dc7d4f4-13cc-498a-ab88-65d39649ece9"
+        "outputId": "6a8d7dab-dec3-4725-a701-0d9aba486425"
       },
       "execution_count": 9,
       "outputs": [
@@ -524,7 +524,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ca285bff-21a4-4484-8f58-eb1bbf57dd07"
+        "outputId": "45aa3e86-95ab-41cc-df9c-0e0b8ce7e2d1"
       },
       "execution_count": 10,
       "outputs": [
@@ -559,7 +559,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "ba98321f-0777-42a4-b025-bdbfccb777c4"
+        "outputId": "8ab35a4a-84ff-4b86-a679-bdaf940c6880"
       },
       "execution_count": 11,
       "outputs": [
@@ -597,7 +597,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e26f9068-66ef-4210-94c3-2627459f751d"
+        "outputId": "0df19b9a-63e2-4461-dce6-979c7a282e61"
       },
       "execution_count": 12,
       "outputs": [
@@ -633,7 +633,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f27af7a1-ed07-4a08-a3ac-4a6f5698517e"
+        "outputId": "ef4b3400-3dc6-4505-cdcc-e9be64c2897b"
       },
       "execution_count": 13,
       "outputs": [
@@ -683,7 +683,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "e6d94307-ce18-4976-d04d-536a49ab0b36"
+        "outputId": "0a886664-c48d-40b5-e5ac-368430dacd3e"
       },
       "execution_count": 14,
       "outputs": [
@@ -691,14 +691,14 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\n"
+            "hari ku bahagia\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "''"
+              "'hari ku bahagia'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
@@ -725,40 +725,38 @@
       "cell_type": "code",
       "source": [
         "input(\"ceritakan kisah Anda: \")\n",
-        "input('ceritakan kisah Anda: ')\n",
         "input('ceritakan kisah Anda: ')"
       ],
       "metadata": {
         "id": "QPZT91gcj8Dr",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 87
+          "height": 70
         },
-        "outputId": "192591c0-74ad-4002-9361-c521176e21cb"
+        "outputId": "98876fd5-adf9-4efa-8fa0-cee3e52e2ef6"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "ceritakan kisah Anda: \n",
-            "ceritakan kisah Anda: \n",
-            "ceritakan kisah Anda: bahagia\n"
+            "ceritakan kisah Anda: cerah\n",
+            "ceritakan kisah Anda: bahgia\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'bahagia'"
+              "'bahgia'"
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "string"
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 15
         }
       ]
     },
@@ -780,13 +778,45 @@
     {
       "cell_type": "code",
       "source": [
-        "input(\"Siapa nama Anda       :\")\n"
+        "input(\"Siapa nama Anda       :\")\n",
+        "input(\"Ceritakan kisah Anda  :\")\n",
+        "input(\"Ceritakan mimpi Anda  :\")\n",
+        "input(\"Orang seperti apa Anda:\")"
       ],
       "metadata": {
-        "id": "LkoZ9-_mhfP6"
+        "id": "LkoZ9-_mhfP6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 105
+        },
+        "outputId": "06aa86cd-b0ef-43cf-88da-b3630abd9358"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Siapa nama Anda       :sitti halimah\n",
+            "Ceritakan kisah Anda  :bahagia\n",
+            "Ceritakan mimpi Anda  :mengembangkan vendor fotografi wedding saya\n",
+            "Orang seperti apa Anda:optimis\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'optimis'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -812,10 +842,29 @@
         "print(input(\"Orang seperti apa Anda:\"))"
       ],
       "metadata": {
-        "id": "B5l2QbR4laVE"
+        "id": "B5l2QbR4laVE",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1b97af2b-f133-4d65-8df2-11b45bbebd01"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Siapa nama Anda       :sitti halimah\n",
+            "sitti halimah\n",
+            "Ceritakan kisah Anda  :bahagia\n",
+            "bahagia\n",
+            "Ceritakan mimpi Anda  :mengembangkan vendor fotografi wedding saya\n",
+            "mengembangkan vendor fotografi wedding saya\n",
+            "Orang seperti apa Anda:optimis\n",
+            "optimis\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -861,7 +910,7 @@
       "metadata": {
         "id": "dWPDPfqsyaMK"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
